@@ -16,6 +16,7 @@ v8.0.33
 - WL#15435: Improve the logging system
 - WL#15401: Support for type hints in module mysqlx
 - BUG#35015758: COM_QUIT should not be called in the connection phase
+- BUG#34984850: Fix binary conversion with NO_BACKSLASH_ESCAPES mode
 - BUG#31355895: Fix slow executemany() with insert statements
 - BUG#30103652: Connector/Python ClientFlag SESION_TRACK is a misspelling
 - BUG#27489972: Several COM_% commands have been deprecated
